--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,25 +25,28 @@
             android:layout_marginBottom="20dp"
             android:background="@android:color/holo_orange_dark"
             android:text="Jouer"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/xml_ajoutMot"
-            android:layout_width="150dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:background="@android:color/holo_orange_light"
             android:text="Ajouter des mots"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/xml_regles"
-            android:layout_width="100dp"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@android:color/holo_orange_light"
-            android:text="Regle du jeu"
+            android:text="Règles du jeu"
+            android:textSize="18sp"
             android:textStyle="bold" />
 </LinearLayout>
 </LinearLayout>
