--- a/app/src/main/res/layout/activity_round.xml
+++ b/app/src/main/res/layout/activity_round.xml
@@ -69,6 +69,8 @@
         android:layout_weight="0.5"
         android:gravity="center|top"
         android:text="Restant :"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
