--- a/app/src/main/res/layout/activity_ajout_de_mot.xml
+++ b/app/src/main/res/layout/activity_ajout_de_mot.xml
@@ -10,7 +10,7 @@
         android:id="@+id/titre_ajoutMot_xml"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="2.2"
         android:gravity="center"
         android:text="Ajoute tes propres mots !"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -32,7 +32,8 @@
             android:layout_weight="1"
             android:hint="Ecris ton mot ici"
             android:inputType="text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
@@ -76,8 +77,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:layout_weight="1.2"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1.9"
             android:background="@android:color/holo_green_light"
             android:text="Ajouter"
             android:textStyle="bold" />
@@ -87,16 +89,34 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="40dp"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="20dp"
             android:layout_weight="0.6"
             android:background="@color/legerBleu" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_motSelected_xml"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_weight="1.3"
+            android:text="Sélectionner et supprimer"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/bouton_supprimer_xml"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="right|top"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="20dp"
